found this stackoverflow that fixed the problem, by adding posistion relative, it now works

--- a/index.css
+++ b/index.css
@@ -129,5 +129,6 @@
 }
 
 .userinput {
-  z-index: 10;
+  position: relative;
+  /* z-index: 10; */
 }
